# venice-city-networks

./: .gitignore  README.md  complex-cities.bib
code/: README.md
code/data/: venice.dl  venice.graph.bridges.Rdata  venice.graph.bridges.rds  venice.graph.rds  venice.graph.undirected.Rdata  venice.graph.undirected.rds  venice.net  venice.short.graphml
code/download-data/: README.md  pyproject.toml
code/download-data/download_data/: __init__.py
code/plot-graph/: analyze-betweenness.R  create-graph.R  edge-table.R  plot-graph.R  pyproject.toml  test-graphml.R  with-bridges.R
code/plot-graph/plot_graph/: __init__.py
papers/: VeniceRef.bib  complex-cities.bib  node-ccs-2025.R  node-ccs-2025.Rnw
