[tool.poetry]
name = "plot-graph"
version = "0.1.0"
description = "Plot Venice graph"
authors = ["JJ Merelo <jjmerelo@gmail.com>"]
license = "Affero GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
igraph = "^0.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plot = "plot_graph:__main__"