[tool.poetry]
name = "plot-graph"
version = "0.1.0"
description = "Plot Venice graph"
authors = ["JJ Merelo <jjmerelo@gmail.com>"]
license = "Affero GPL"

[tool.poetry.dependencies]
python = "^3.10"
igraph = "^0.11.5"


pycairo = "^1.26.1"
networkx = "^3.3"
matplotlib = "^3.9.0"
scipy = "^1.14.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plot = "plot_graph:__main__"
plotnx = "plot_graph:v2"